tests/negative/list_cstyle_break_before_push_oob_index_assign.far
fun main() -> i64 {
  lst: List<i64> = List<i64>()
  for (i = 0; i < 10; i = i + 1) {
    if (i == 2) {
      break
    }
    lst.push(i)
  }
  lst[2] = 9
  return 0
}
